--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>my.company</groupId>
+    <groupId>br.com</groupId>
     <artifactId>StreamMusicasPerfilDoArtista</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>com.github.heflain-mendes</groupId>
             <artifactId>StreamMusicas</artifactId>
-            <version>1.0.11</version>
+            <version>1.0.12</version>
         </dependency>
     </dependencies>
 
